clusters/talos-cluster/apps/vault-restore-validator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dr-validate
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    app.kubernetes.io/part-of: vault-restore-validation
    nwarila.io/platform-addon: vault-restore-validator
